# nn

./: .gitignore  Cargo.toml  README.md  normalize.py  output.csv  partitions.toml  plot.py  possum.csv  reduced.csv  scaled.csv  xor.csv
scripts/: build.sh  g  kitty  kitty.conf  perf.sh  run.sh  single  term.sh  test.sh
src/: base.rs  graph.rs  main.rs  mlp.rs
