[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
dot = "0.1.4"
simple-error = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
log = "*"
csv = "1.3.0"
toml = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
